<resources>
    <string name="app_name">Calculator Story</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="FullCal">Calculator App</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitCoverter</string>
    <string name="clear">CE</string>
    <string name="backspace">⌫</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard calculator</string>
    <string name="sciCal">Scientific calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="history">History</string>
    <string name="delete_history">Delete History</string>
    <string name="sqrt_option_1">Bring the whole equation to √ .</string>
    <string name="sqrt_option_2">Put √ behind the equation.</string>
    <string name="square_option_1">Bring the whole equation to ^2 .</string>
    <string name="square_option_2">Put ^2 behind the equation.</string>
    <string name="custom_option_1">Bring the whole equation to %s.</string>
    <string name="custom_option_2">Put %s behind the equation.</string>
    <string name="ok">OK</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>
    <string name="programmer_calculator">Programmer calculator</string>
    <string name="date_calculation">Date calculation</string>
    <string name="length">Length</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="temperature">Temperature</string>
    <string name="equation">Equation</string>
    <string name="constant">Constant</string>
    <string name="data">Data</string>
    <string name="area">Area</string>
    <string name="speed">Speed</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="option">Option</string>
    <string name="load_equation">Load equation</string>
    <string name="save_equation">Save equation</string>
    <string name="insert_constant">Insert constant</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="error_name_empty">The name can not empty.</string>
    <string name="error_equation_empty">The equation can not empty.</string>
    <string name="error_constant_empty">The constant can not empty.</string>
    <string name="equation_saved">The equation is saved.</string>
    <string name="no_data">No data.</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done.</string>
    <string name="back">Back</string>
    <string name="length_unit">Length unit</string>
    <string name="nanometers">Nanometers</string>
    <string name="microns">Microns</string>
    <string name="millimeters">Millimeters</string>
    <string name="centimeters">Centimeters</string>
    <string name="meters">Meters</string>
    <string name="kilometers">Kilometers</string>
    <string name="inches">Inches</string>
    <string name="feet">Feet</string>
    <string name="yards">Yards</string>
    <string name="miles">Miles</string>
    <string name="nautical_miles">Nautical Miles</string>
    <string name="celsius">°C (Celsius)</string>
    <string name="fahrenheit">°F (Fahrenheit)</string>
    <string name="kelvin">K (Kelvin)</string>
    <string name="reaumur">°R (Réaumur)</string>
    <string name="celsius_small">°C</string>
    <string name="fahrenheit_small">°F</string>
    <string name="kelvin_small">K</string>
    <string name="reaumur_small">°R</string>
    <string name="replace_result">Replace result</string>
    <string name="insert_last">Insert last</string>
    <string name="between_date_calculation">Between date calculation</string>
    <string name="square_millimeters">Square millimeters</string>
    <string name="square_centimeters">Square centimeters</string>
    <string name="square_meters">Square meters</string>
    <string name="square_kilometers">Square kilometers</string>
    <string name="square_inches">Square inches</string>
    <string name="square_feet">Square feet</string>
    <string name="square_yards">Square yards</string>
    <string name="square_mile">Square mile</string>
    <string name="hectares">Hectares</string>
    <string name="acres">Acres</string>
    <string name="rai">Rai</string>
    <string name="square_wa">Square wa</string>
    <string name="centimeters_per_second">Centimeters per second</string>
    <string name="meters_per_second">Meters per second</string>
    <string name="kilometers_per_hour">Kilometers per hour</string>
    <string name="feet_per_second">Feet per second</string>
    <string name="miles_per_hour">Miles per hour</string>
    <string name="knots">Knots</string>
    <string name="mach">Mach</string>
    <string name="bits">Bits</string>
    <string name="bytes">Bytes</string>
    <string name="kilobits">Kilobits</string>
    <string name="kilobytes">Kilobytes</string>
    <string name="megabits">Megabits</string>
    <string name="megabytes">Megabytes</string>
    <string name="gigabits">Gigabits</string>
    <string name="gigabytes">Gigabytes</string>
    <string name="terabits">Terabits</string>
    <string name="terabytes">Terabytes</string>
    <string name="petabits">Petabits</string>
    <string name="petabytes">Petabytes</string>
    <string name="exabits">Exabits</string>
    <string name="exabytes">Exabytes</string>
    <string name="zetabits">Zetabits</string>
    <string name="zetabytes">Zetabytes</string>
    <string name="yottabits">Yottabits</string>
    <string name="yottabytes">Yottabytes</string>
    <string name="bits_small">Bits</string>
    <string name="bytes_small">Bytes</string>
    <string name="kilobits_small">kb</string>
    <string name="kilobytes_small">kB</string>
    <string name="megabits_small">Mb</string>
    <string name="megabytes_small">MB</string>
    <string name="gigabits_small">Gb</string>
    <string name="gigabytes_small">GB</string>
    <string name="terabits_small">Tb</string>
    <string name="terabytes_small">TB</string>
    <string name="petabits_small">Pb</string>
    <string name="petabytes_small">PB</string>
    <string name="exabits_small">Eb</string>
    <string name="exabytes_small">EB</string>
    <string name="zetabits_small">Zb</string>
    <string name="zetabytes_small">ZB</string>
    <string name="yottabits_small">Yb</string>
    <string name="yottabytes_small">YB</string>
    <string name="carats">Carats</string>
    <string name="milligrams">Milligrams</string>
    <string name="grams">Grams</string>
    <string name="kilograms">Kilograms</string>
    <string name="metric_tonnes">Metric tonnes</string>
    <string name="ounces">Ounces</string>
    <string name="pounds">Pounds</string>
    <string name="stone">Stone</string>
    <string name="short_tons_us">Short tons (US)</string>
    <string name="long_tons_uk">Long tons (UK)</string>
    <string name="milliliters">Milliliters</string>
    <string name="cubic_centimeters">Cubic centimeters</string>
    <string name="liters">Liters</string>
    <string name="cubic_meters">Cubic meters</string>
    <string name="teaspoons_us">Teaspoons (US)</string>
    <string name="tablespoons_us">Tablespoons (Us)</string>
    <string name="fluid_ounces_us">Fluid ounces (US)</string>
    <string name="cups_us">Cups (US)</string>
    <string name="pints_us">Pints (US)</string>
    <string name="quarts_us">Quarts (US)</string>
    <string name="gallons_us">Gallons (US)</string>
    <string name="cubic_inches">Cubic inches</string>
    <string name="cubic_feet">Cubic feet</string>
    <string name="teaspoons_uk">Teaspoons (UK)</string>
    <string name="tablespoons_uk">Tablespoons (UK)</string>
    <string name="fluid_ounces_uk">Fluid ounces (UK)</string>
    <string name="pints_uk">Pints (UK)</string>
    <string name="quarts_uk">Quarts (UK)</string>
    <string name="gallons_uk">Gallons (UK)</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="vibrate">Vibrate</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="credit">Credits</string>
    <string name="more">More</string>
    <string name="version">Version</string>
    <string name="startup">Startup</string>
    <string name="paste">Paste</string>
    <string name="paste_last">Paste at the end</string>
    <string name="save_constant">Save constant</string>
    <string name="feedback">Feedback</string>
    <string name="time">Time</string>
    <string name="power">Power</string>
    <string name="pressure">Pressure</string>
    <string name="energy">Energy</string>
    <string name="watts">Watts</string>
    <string name="kilowatts">Kilowatts</string>
    <string name="megawatts">Megawatts</string>
    <string name="horsepower">Horsepower (US)</string>
    <string name="foot_pound_per_minute">Foot-pound/minute</string>
    <string name="btu_minute">BTUs/minute</string>
    <string name="atmospheres">Atmospheres</string>
    <string name="bars">Bars</string>
    <string name="kilopascals">Kilopascals</string>
    <string name="millimeters_of_mercury">Millimeters of mercury</string>
    <string name="pascals">Pascals</string>
    <string name="pound_per_square_inch">Pound per square inch</string>
    <string name="microseconds">Microseconds</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <plurals name="month">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <string name="years">Years</string>
    <string name="electron_volts">Electron volts</string>
    <string name="joules">Joules</string>
    <string name="kilojoules">Kilojoules</string>
    <string name="food_calories">Food calories</string>
    <string name="ads_id">ca-app-pub-8439082072622445/4351213400</string>
    <plurals name="year">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
</resources>