<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/container_dialog"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:background="@drawable/dialog_rounded_corner_bg"
              android:minWidth="240dp"
              android:orientation="vertical"
              android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_equation"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edt_equation_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/edt_equation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:gravity="top"
                android:hint="@string/equation"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/selector_btn_3d_green"
                android:text="@string/save"
                android:textColor="@color/colorTextPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>